<resources>
    <string name="app_name">DekTes</string>
    <string name="article_picture">Gambar Article</string>
    <string name="article_name">Judul Article</string>
    <string name="article_date">01/02/03</string>
    <string name="article_source">www/asasdasdasd.com</string>

    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="profile">Historry</string>
    <string name="btn_back">Back</string>
    <string name="main">Main</string>
    <string name="action_settings">Settings</string>

    <string name="resulttest">Hasil Test</string>
    <string name="article_desc">Deskripsi</string>
    <string name="article_pictur">Gambar</string>
    <string name="btn_start">Mulai Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stress">Tingkat Stres</string>
    <string name="stress_percent">90.05%</string>
    <string name="stress_desc">Deskripsi</string>
    <string name="welcome">Hello ! 👋 Pengguna</string>
    <string name="delete">Hapus</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="predik">Tingkat stress: -</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Analis Wajah</string>
    <string name="image_empty">Gambar Kosongg manaa</string>
    <string name="welcome_desk">Bagaimana perasaan anda hari ini Mari kita cek tingkat Stresmu</string>

</resources>